css/main.css
.container {
    max-width: 900px;
}

.large-font {
    font-size: 1.25em;
}

.no-bullet {
    list-style-type: none;
}

body {
    padding-bottom: 20px;
    padding-top: 20px;
}

.navbar {
    margin-bottom: 40px;
}

.img-language {
    margin: 10px;
    width: 65px;
}

.img-language-about {
    margin: 10px;
    width: 75px;
}

.row-feature {
    padding-bottom: 30px;
    padding-top: 10px;
}

.h-feature {
    margin-top: 0px;
    font-weight: bold;
}

.h-about {
    padding-top: 75px;
}

.text-main {
    font-size: 20px;
}

.row {
    margin-bottom: 20px;
}

.footer {
    color: #AAAAAA;
    font-size: 12px;
    padding-top: 50px;
}

.img-feature {
    box-shadow: 5px 5px 10px #AAAAAA;
}

.panel-heading {
    cursor: pointer;
}

